TrialoftheTitansPackage/main/default/objects/Titan__c/Titan__c.object-meta.xml
<CustomObject>
    <label>Titan</label>
    <nameField>
        <label>Titan Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Titans</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>