TrialoftheTitansPackage/main/default/objects/Titan__c/fields/First_Exam__c.field-meta.xml
<CustomField>
    <fullName>First_Exam__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>First Exam</label>
    <referenceTo>Exam__c</referenceTo>
    <relationshipLabel>Titans</relationshipLabel>
    <relationshipName>Titans</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>