TrialoftheTitansPackage/main/default/objects/Titan__c/fields/Number_of_Skills__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Skills__c</fullName>
    <description>Number of Skills associated with the Titan</description>
    <label>Number of Skills</label>
    <summaryForeignKey>Skill__c.Titan__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>