TrialoftheTitansPackage/main/default/objects/Titan__c/fields/Required_Titan__c.field-meta.xml
<CustomField>
    <fullName>Required_Titan__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Required Titan</label>
    <referenceTo>Titan__c</referenceTo>
    <relationshipLabel>Titans</relationshipLabel>
    <relationshipName>Titans</relationshipName>
    <type>Lookup</type>
</CustomField>