TrialoftheTitansPackage/main/default/objects/Titan__c/fields/Series__c.field-meta.xml
<CustomField>
    <fullName>Series__c</fullName>
    <label>Series</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
    <unique>true</unique>
</CustomField>